# general-web-scraper

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
scrapy/: .gitignore  Cargo.toml
scrapy-client/: .gitignore  README.md  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
scrapy-client/src/: App.tsx  main.tsx  vite-env.d.ts
scrapy-client/src/api/: index.ts
scrapy-client/src/components/: alert-manager.tsx  connection-status.tsx  data-visualization.tsx  download-options.tsx  error-manager.tsx  insights-table.tsx  message-display.tsx  message-preview.tsx  navigation-table.tsx  results-display.tsx  sidebar.tsx  theme-toggle.tsx  welcome-card.tsx
scrapy-client/src/components/ui/: dialog.tsx  (+1 more)
scrapy-client/src/contexts/: ws.tsx
scrapy-client/src/hooks/: useClearScrapedItems.ts  useClearScrapingResult.ts  useClipboard.ts  useCrawl.ts  useEventSource.ts  useInitializeCrawler.ts  useModels.ts  useScrapingResult.ts  useWebSocket.ts  useWebSocketContext.ts
scrapy-client/src/lib/: constants.ts  secure-storage.ts
scrapy-client/src/providers/: ReactQueryProvider.tsx  WebSocketProvider.tsx  index.tsx  theme-provider.tsx
scrapy-client/src/schemas/: index.ts
scrapy-client/src/types/: index.ts
scrapy/src/: constants.rs  crawler.rs  downloader.rs  main.rs  spider.rs  utils.rs
scrapy/src/ai/: mod.rs  service.rs
scrapy/src/error/: mod.rs
scrapy/src/models/: message.rs  mod.rs
scrapy/src/routes/: events.rs  mod.rs  ws.rs
scrapy/src/services/: ai_service.rs  crawler_service.rs  mod.rs  websocket_service.rs
scrapy/src/types/: mod.rs
