[package]
name = "scrapy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.83"
futures-util = "0.3.30"
log = "0.4.22"
lol_html = "2.0.0"
reqwest = { version = "0.12.8", features = ["json"] }
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
scraper = "0.20.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full", "sync"] }
tokio-stream = "0.1.16"
url = "2.5.2"
ws = "0.9.2"
tokio-tungstenite = "0.24.0"
thiserror = "1.0.64"
