[package]
name = "scrapy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.83"
futures-util = "0.3.30"
log = "0.4.22"
reqwest = { version = "0.12.8", features = ["json"] }
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
scraper = "0.20.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full", "sync"] }
tokio-stream = "0.1.16"
url = "2.5.2"
ws = { package = "rocket_ws", version = "0.1.1" }
tokio-tungstenite = "0.24.0"
thiserror = "1.0.64"
env_logger = "0.11.5"
google-generative-ai-rs = { version = "0.3.2", features = ["beta"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }

[dev-dependencies]
dotenvy = "0.15.7"
